--- a/VendingMachine/VendingMachine.csproj
+++ b/VendingMachine/VendingMachine.csproj
@@ -107,6 +107,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\VendingMachineCreditCards\VendingMachineCreditCards.csproj">
+      <Project>{4734d5a9-431e-488a-a602-a785c061e35e}</Project>
+      <Name>VendingMachineCreditCards</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VendingMachineRepository\VendingMachineRepository.csproj">
       <Project>{3740dccd-690e-4354-a70f-549c5a28017f}</Project>
       <Name>VendingMachineRepository</Name>
